[package]
name = "etcd-discovery"
version = "0.1.0"
edition = "2021"
authors = ["plucky"]
description = "Etcd discovery and register for tonic"
readme = "readme.md"
keywords = [
    "etcd",
    "discovery",
    "register",
    "tonic",
]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/etcd-discover"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
tonic = "0.10"
etcd-client = "0.12"
async-recursion = "1"
tower = "0.4"

tracing = "0.1"

[dev-dependencies]
tracing-subscriber = {version = "0.3", features = ["fmt"]}



