[package]
name = "etcd-discovery"
version = "0.1.5"
edition = "2021"
authors = ["plucky"]
description = "Etcd discovery and register for tonic"
readme = "readme.md"
keywords = [
    "etcd",
    "discovery",
    "register",
    "tonic",
]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/etcd-discovery"
documentation = "https://docs.rs/crate/etcd-discovery/latest"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1"}
tonic = "0"
etcd-client = "0"
async-recursion = "1"
tower = "0"

tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
tracing-subscriber = {version = "0.3", features = ["fmt"]}



